# progressive_search

./: .gitignore  README.md  pyproject.toml
examples/: 2d_nodes_interpolation_process.py  2d_nodes_order_animation.py  2d_real_nodes_generation_progress_animation.py  find_minimum.py
src/progressive_search/: main.py
